--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -22,5 +22,7 @@
         </ion-item>
 
         <ion-button color="tertiary" (click)="addTask(lok, hint)">Add</ion-button>
+        <ion-button color="tertiary" (click)="next()">test</ion-button>
+
     </div>
 </ion-content>
