--- a/src/app/card/card.page.html
+++ b/src/app/card/card.page.html
@@ -16,7 +16,7 @@
         </ion-card-header>
 
         <ion-card-content >
-            {{c + 'aaaa'}}
+            {{c.location + 'aaaa'}}
 <!--            {{task?.hint}}-->
         </ion-card-content>
     </ion-card>
