--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -26,6 +26,6 @@
     </div>
     <ion-item class="test-block" >
         <ion-label>Тестовый режим уведомлений</ion-label>
-        <ion-checkbox color="primary" [(ngModel)]="isChecked" (ionChange)="testCheck()"></ion-checkbox>
+        <ion-checkbox color="primary" (ionChange)="testCheck()"></ion-checkbox>
     </ion-item>
 </ion-content>
