--- a/src/app/home/list/list.component.html
+++ b/src/app/home/list/list.component.html
@@ -1,4 +1,5 @@
 <!--<ion-button color="warning" (click)="load()" >Update</ion-button>-->
+<!--<div>{{tasksService.test$ | async}}</div>-->
 <ion-list *ngFor="let task of tasks, let i = index ">
     <ion-item >
         <ion-label (click)="showCard(task.id)">{{task.location}} | {{task.date | date:"MMM-d:hh:mm"}}</ion-label>
