удалил события роута, переделал list.component на ngrx

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,7 +9,6 @@
 </ion-header>
 
 <ion-content>
-<!--    <button (click)="sendingToken()">http</button>-->
-    <app-list [tasks]="tasks" ></app-list>
+    <app-list ></app-list>
 </ion-content>
 
