--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -2,12 +2,12 @@
     <ion-toolbar color="primary">
         <div class="header">
             <ion-title>Memento</ion-title>
+            <ion-icon name="megaphone" routerLink="/notification-list" ></ion-icon>
             <ion-icon routerLink="/add" name="add"(click)="transition()"></ion-icon>
         </div>
     </ion-toolbar>
 
 </ion-header>
-
 <ion-content>
     <app-list ></app-list>
 </ion-content>
