--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -2,7 +2,7 @@
     <ion-toolbar color="primary">
         <div class="header">
             <ion-title>Memento</ion-title>
-            <ion-icon name="megaphone" routerLink="/notification-list" ></ion-icon>
+            <router-outlet name='home'></router-outlet>
             <ion-icon routerLink="/add" name="add"(click)="transition()"></ion-icon>
         </div>
     </ion-toolbar>
