--- a/src/app/card/card.page.html
+++ b/src/app/card/card.page.html
@@ -1,12 +1,20 @@
 <ion-header>
-  <ion-toolbar color="primary">
-      <div class="header">
-          <ion-title>card</ion-title>
-          <ion-icon name="arrow-forward" (click)="transitionHome()"></ion-icon>
-      </div>
-  </ion-toolbar>
+    <ion-toolbar color="primary">
+        <div class="header">
+            <ion-title>card</ion-title>
+            <ion-icon name="arrow-forward" (click)="transitionHome()"></ion-icon>
+        </div>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-    <ion-button color="tertiary" (click)="next()">Add</ion-button>
+    <div class="location">
+        <h3>{{taskForId.location}}</h3>
+    </div>
+    <div class="line-top"></div>
+    <div class="hint">
+        <p>{{taskForId.hint}}</p>
+    </div>
+    <div class="line"></div>
+    <!--    <ion-button color="tertiary" (click)="next()">Add</ion-button>-->
 </ion-content>
